nats-micro/tests/ui/service_error_invalid_code_success.rs
use nats_micro::service_error;

#[service_error]
pub enum DemoError {
    #[code(200)]
    #[error("bad")]
    Bad,
}

fn main() {}
